--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@types/react-router-dom": "^4.3.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mobx": "^4.5.0",
+    "mobx-react": "^5.2.8",
     "typescript": "^3.1.1"
   },
   "jest": {
