--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "normalize.css": "^8.0.0",
     "object-assign": "4.1.1",
@@ -25,7 +22,6 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.5.2",
-    "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -34,16 +30,13 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
-    "ts-loader": "^2.3.7",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.7.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-react": "^3.2.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
     "webpack-dev-server": "2.11.3",
-    "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
@@ -58,11 +51,20 @@
     "@types/react-dom": "^16.0.8",
     "@types/react-router": "^4.0.31",
     "@types/react-router-dom": "^4.3.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "interpolate-html-plugin": "^3.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mobx": "^4.5.0",
     "mobx-react": "^5.2.8",
-    "typescript": "^3.1.1"
+    "react-dev-utils": "^6.0.2",
+    "ts-loader": "^5.2.1",
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "jest": {
     "collectCoverageFrom": [
