--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-dom": "^16.0.8",
     "@types/react-router": "^4.0.31",
     "@types/react-router-dom": "^4.3.1",
+    "csv-loader": "^3.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -59,6 +60,7 @@
     "less-loader": "^4.1.0",
     "mobx": "^4.5.0",
     "mobx-react": "^5.2.8",
+    "papaparse": "^4.6.1",
     "react-dev-utils": "^6.0.2",
     "ts-loader": "^5.2.1",
     "typescript": "^3.1.1",
