--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
-    "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -51,11 +50,14 @@
     "@types/react-dom": "^16.0.8",
     "@types/react-router": "^4.0.31",
     "@types/react-router-dom": "^4.3.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
     "csv-loader": "^3.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "interpolate-html-plugin": "^3.0.0",
+    "jest-raw-loader": "^1.0.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mobx": "^4.5.0",
@@ -84,7 +86,7 @@
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
+      "^.+\\.(tsx|ts)?$": "<rootDir>/config/jest/typescriptTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
@@ -92,7 +94,9 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|ts|tsx)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^.*\/(.*).csv$": "<rootDir>/csv-converted/$1.json",
+      "^@/(.*)$": "<rootDir>/src/$1"
     },
     "moduleFileExtensions": [
       "web.ts",
