--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
       "src/**/*.{js,jsx,ts,tsx}",
       "!**/*.d.ts"
     ],
+    "coveragePathIgnorePatterns": [
+      "/csv-converted/"
+    ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
@@ -115,7 +118,8 @@
       "ts-jest": {
         "tsConfigFile": "/home/junchao/coding/taiwu-app/tsconfig.test.json"
       }
-    }
+    },
+    "globalSetup": "<rootDir>/config/convert-csv.js"
   },
   "babel": {
     "presets": [
